# Henry-Ugo-s-Personal-AI

./: .gitignore  .henryrc.example.json  .npmrc  AUDIT_REPORT.md  CONTRIBUTING.md  FEATURES_IMPLEMENTATION.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PHASE1.md  PHASE2.md  PROJECT_STATUS.md  README.md  README_ENV.md  package.json  playwright.config.ts  pnpm-lock.yaml  test-agent-standalone.mjs  test-agent.js  test-agent.mjs  test-agent.ts  test-simple.mjs  tsconfig.json  turbo.json  vitest.config.ts
.turbo/daemon/: 7e793f647e096f8b-turbo.log.2025-12-08  7e793f647e096f8b-turbo.log.2025-12-09  7e793f647e096f8b-turbo.log.2025-12-15
apps/cli/: package.json  tsconfig.json
apps/cli/src/: index.ts
apps/desktop/: generate-icons.mjs  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  (+5 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  vite.config.ts
desktop/: package.json
desktop/src/: main.tsx
desktop/src-tauri/: tauri.conf.json
docs/: AUTOCOMPLETE.md  CLOUD_AI_FALLBACK.md  CUSTOM_COMMANDS.md  CUSTOM_COMMANDS_IMPLEMENTATION.md  DIFF_VIEWER.md  FILE_WATCHER.md  MONACO_AUTOCOMPLETE_SETUP.md  MULTI_STEP_EXECUTION.md  README.md  SECURITY_TESTING.md  WEB_MOBILE_SYNC.md
examples/: autocomplete-usage.ts  cloud-ai-fallback.ts  command-usage.ts  multi-step-execution.ts  sync-usage.ts
examples/mental-health-api/: README.md
tests/e2e/: editor.spec.ts
(+51 files in other folders)
